--- a/.env
+++ b/.env
@@ -1,2 +1,16 @@
-PORT = 3000
-JWT_CONSTANT = 'secretKey'
+PORT=3000
+JWT_CONSTANT='secretKey'
+TYPEORM_PORT=3000
+TYPEORM_CONNECTION=postgres
+TYPEORM_HOST=localhost
+TYPEORM_USERNAME=root
+TYPEORM_PASSWORD=admin
+TYPEORM_DATABASE=test_db
+TYPEORM_PORT=5432
+TYPEORM_SYNCHRONIZE=false
+TYPEORM_LOGGING=true
+TYPEORM_ENTITIES=dist/**/*entity.js
+TYPEORM_MIGRATIONS=dist/migrations/*.js
+TYPEORM_MIGRATIONS_DIR=src/migrations
+TYPEORM_MIGRATIONS_RUN=false
+TYPEORM_MIGRATIONS_TABLE_NAME=migrations
